<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="105dp">


    <TextView
        android:layout_width="200dp"
        android:id="@+id/portfolioAltCoinName"
        android:textSize="18sp"
        android:text="@string/symbol"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/portfolioItemAmount"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_below="@+id/portfolioAltCoinName"
        app:tint="#808080"
        android:text="@string/amount"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/portfolioItemTotal"
        android:layout_toEndOf="@+id/portfolioItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portfolioAltCoinName"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_input_placeholder"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/portfolioItemPairLabel"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_below="@+id/portfolioItemTotal"
        android:text="@string/pair"
        android:textStyle="bold"
        android:textSize="16sp"
        app:tint="#808080"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/portfolioItemPairName"
        android:layout_toEndOf="@+id/portfolioItemPairLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_input_placeholder"
        android:layout_below="@+id/portfolioItemTotal"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:background="#808080"/>


</RelativeLayout>